--- a/TaskList/index.html
+++ b/TaskList/index.html
@@ -21,17 +21,15 @@
             <div class="search-btn"><i class="fa fa-search"></i></div>
         </div>
         <ul class='task-list'>
-            <li>Learn Data Structure <span class="delete-btn"><i class="fa fa-trash"></i></span></li>
-            <li>Go to the Gym <span class="delete-btn"><i class="fa fa-trash"></i></span></li>
-            <li>Buying a new padding <span class="delete-btn"><i class="fa fa-trash"></i></span></li>
-            <li>Go travel <span class="delete-btn"><i class="fa fa-trash"></i></span></li>
-            <li>Make cookie <span class="delete-btn"><i class="fa fa-trash"></i></span></li>
-            <li>Do homework <span class="delete-btn"><i class="fa fa-trash"></i></span></li>
+    
         </ul>
         <div class="footer">
-            <div>You have <span class='pending-number'>5</span> tasks left</div>
+            <div>You have <span class='pending-number'> </span> tasks left</div>
             <div class="clear-btn"> Clear All</div>
         </div>
     </div>
+
+
+    <script src="index.js"></script>
 </body>
 </html>
